--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.asuscomm.yangyinetwork.mapplayground">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <meta-data android:name="com.kakao.sdk.AppKey" android:value="cf315ba3929de1da0e09db6c945dc249"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
